--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
+@font-face{
+  font-family: TASA-DSB;
+  src: url(xternal/TASAOrbiterDisplay-SemiBold-BF64891cba47942.otf);
+}
+@font-face{
+  font-family: TASA-DB;
+  src: url(xternal/TASAOrbiterDisplay-Bold-BF64891cba5ae6f.otf);
+}
+
 html {
     box-sizing: border-box;
     font-size: 16px;
-    background-color: #333;
+    background-color: #272226;
     
   }
   
@@ -32,9 +41,10 @@ html {
     width: 100%;
     height: 10%;
     border: 1px red solid;
-
+    font-family: TASA-DB;
     align-items: center;
     justify-content: space-between;
+    color:#AEAAA6;
   }
 
   .intro{
@@ -44,12 +54,13 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-
+    font-family: TASA-DSB;
+    
   }
 
   .title{
  
-    color: whitesmoke;
+    color: #AEAAA6;
     width: 95vw;
     height: 50%;
     display: flex;
@@ -82,11 +93,11 @@ html {
   }
 
   .subtitle h3:nth-child(1){
-    color: gray;
+    color: #535350;
   }
 
   .subtitle h3:nth-child(2){
-    color: whitesmoke;
+    color: #AEAAA6;
   }
 
   
