--- a/style.css
+++ b/style.css
@@ -1,105 +1,221 @@
-@font-face{
+@font-face {
   font-family: TASA-DSB;
   src: url(xternal/TASAOrbiterDisplay-SemiBold-BF64891cba47942.otf);
 }
-@font-face{
+
+@font-face {
   font-family: TASA-DB;
   src: url(xternal/TASAOrbiterDisplay-Bold-BF64891cba5ae6f.otf);
 }
 
+@font-face {
+  font-family: TASA-R;
+  src: url(xternal/TASAOrbiterDisplay-Regular-BF64891cba1d563.otf);
+}
+
+
 html {
-    box-sizing: border-box;
-    font-size: 16px;
-    background-color: #131416;
-    
-  }
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: #131416;
   
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+
+}
+
+div {
+/*   border: solid 1px red; */
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.nav {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 10%;
+  font-family: TASA-DB;
+  align-items: center;
+  justify-content: space-between;
+  color: #AEAAA6;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.intro {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: TASA-DSB;
+
+}
+
+.title {
+
+  color: #AEAAA6;
+  width: 95vw;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+
+  font-size: 6.5em;
+}
+
+.title h1:nth-child(1) {
+  padding-right: 1.5em;
+}
+
+.title h1:nth-child(2) {
+  padding-left: 2.65em;
+}
+
+.subtitle {
+
+  width: 20vw;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.subtitle h3 {
+  font-size: 3em;
+}
+
+.subtitle h3:nth-child(1) {
+  color: #535350;
+}
+
+.subtitle h3:nth-child(2) {
+  color: #AEAAA6;
+}
+
+.sezL, .sezR{
+  width: 100%;
+  height: 100vh;
+  display:flex; 
+  color: #AEAAA6;
+
+}
+
+.sezL h1, .sezR h1{
+  font-family: TASA-DB;
   
-  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-   
-  }
-  
-  ol, ul {
-    list-style: none;
-  }
-  
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+}
 
-  .nav{
-    position:fixed;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 10%;
-    border: 1px red solid;
-    font-family: TASA-DB;
-    align-items: center;
-    justify-content: space-between;
-    color:#AEAAA6;
-    padding-left: 2em;
-    padding-right: 2em;
-  }
+.sezL p, .sezR p{
+  font-family: TASA-R;
+}
 
-  .intro{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    font-family: TASA-DSB;
-    
-  }
+.sezL_left{
+  width:65%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
 
-  .title{
- 
-    color: #AEAAA6;
-    width: 95vw;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    
-    font-size: 10.5em;
-  }
+.sezL_left h1{
 
-  .title h1:nth-child(1){
-    padding-right: 1.5em;
-  }
-  .title h1:nth-child(2){
-    padding-left: 2.65em;
-  }
 
-  .subtitle{
-    
-    width: 20vw;
-    height: 15%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  text-align: right;
+  font-size: 8em;
+  padding-right: 10%;
+}
 
-  .subtitle h3{
-    font-size: 3em;
-  }
+.sezL_left p{
 
-  .subtitle h3:nth-child(1){
-    color: #535350;
-  }
+  font-size: 1.8em;
+  text-align: justify;
+  padding-right: 20%;
+  margin-left: 5%;
+}
 
-  .subtitle h3:nth-child(2){
-    color: #AEAAA6;
-  }
+.sezL_right{
+  width:35%;
+  height:100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
 
-  
+.sezL img{
+  width: 100%;
+}
+
+.sezR_right{
+  width:65%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5%;
+}
+
+.sezR_right h1{
+
+
+  text-align: left;
+  font-size: 8em;
+  padding-left: 10%;
+}
+
+.sezR_right p{
+
+  font-size: 1.8em;
+  text-align: justify;
+  padding-left: 20%;
+  margin-right: 5%;
+}
+
+.sezR_left{
+  width:35%;
+  height:100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.sezR img{
+  width: 100%;
+}
