HO CRACCATO GSAP

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ div {
      /*border: solid 1px red; */
 }
 
+.workaround{
+  margin-top: 100px;
+  padding-top: 500px;
+}
 ol,
 ul {
   list-style: none;
