--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ progress::-webkit-progress-value {
 
 .list_container_RIGHT_CONTAINER {
   width: 100%;
-  height: 160vh;
+  height: 165vh;
   display: flex;
 
   flex-direction: column;
@@ -219,7 +219,7 @@ progress::-webkit-progress-value {
   display: flex;
   height: 90%;
   width: 45%;
-
+  gap:5%;
   padding-top: 10%;
 }
 
