--- a/style.css
+++ b/style.css
@@ -404,13 +404,22 @@ ol {
 
 .sez_center {
   width: 100%;
-  height: 135vh;
-  display: flex;
-  flex-direction: column;
-  /*padding-right: 5%;*/
+  height: 100vh;
+  border: 1px green solid; 
 }
 
-
+.elem{
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  width: 100%;
+  height: 100%;
+  border: 1px solid red;
+}
+.top ,.elem{
+  opacity:0;
+}
 .sez_center h1 {
   text-align: center;
   font-size: 8em;
@@ -428,7 +437,7 @@ ol {
 }
 
 .sez_center p {
-  font-size: 1.8em;
+  font-size: 3em;
   margin-right: 5%;
   margin-left: 5%;
   text-align: justify;
@@ -440,12 +449,13 @@ ol {
   align-items: center;
   justify-content: space-evenly;
   flex-direction: row;
+  
 }
 
 .cifrario {
-  width: 32%;
-  height: 65vh;
-  background-color: #F18010;
+  border: solid 1px blue;
+  width: 25%;
+  height: 25%;
   display: flex;
   align-items: center;
   flex-direction: column;
