--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ ol {
 .sez_center {
   width: 100%;
   height: 100vh;
-  border: 1px green solid; 
+ 
 }
 
 .elem{
@@ -415,7 +415,7 @@ ol {
   transform: translate(-50%,-50%);
   width: 100%;
   height: 100%;
-  border: 1px solid red;
+
 }
 .top ,.elem{
   opacity:0;
@@ -449,13 +449,15 @@ ol {
   align-items: center;
   justify-content: space-evenly;
   flex-direction: row;
-  
+
+  height: 60%;
+  width: 100%;
 }
 
 .cifrario {
-  border: solid 1px blue;
+
   width: 25%;
-  height: 25%;
+  height: auto;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -463,14 +465,16 @@ ol {
 
 .cifrario h2 {
   font-family: TASA-DB;
-  color: #131416;
+   color: #F18010;
+
   text-align: justify;
   margin-top: 40px;
-  font-size: 5.3em;
+  font-size: 2em;
 }
 
 .cifrario p {
-  color: #131416;
+   color: #AEAAA6;
+
   font-size: 1.8em;
   text-align: right;
   margin-right: 0%;
