--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ progress::-webkit-progress-value {
 
 .subtitle {
 
-  width: 20vw;
+  width: 50vw;
   height: 15%;
   display: flex;
   flex-direction: column;
@@ -167,7 +167,7 @@ progress::-webkit-progress-value {
 }
 
 .subtitle h3 {
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .subtitle h3:nth-child(1) {
@@ -175,9 +175,11 @@ progress::-webkit-progress-value {
 }
 
 .subtitle h3:nth-child(2) {
-  color: #AEAAA6;
+  color: #AEAAA6; 
 }
-
+.subtitle h3:nth-child(3) {
+  color: #535350;
+}
 .sez {
   width: 100%;
   height: 100vh;
