--- a/style.css
+++ b/style.css
@@ -417,7 +417,8 @@ ol {
   position: absolute;
   top: 50%;
   left:50%;
-  transform: translate(-50%,-50%);
+  margin-top:-50%;
+  margin-left:-50%;
   width: 100%;
   height: 100%;
 
