--- a/style.css
+++ b/style.css
@@ -417,10 +417,9 @@ ol {
   position: absolute;
   top: 50%;
   left:50%;
-  margin-top:-50%;
-  margin-left:-50%;
-  width: 100%;
-  height: 100%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
 
 }
 .top ,.elem{
