--- a/style.css
+++ b/style.css
@@ -418,8 +418,8 @@ ol {
   top: 50%;
   left:50%;
   transform: translate(-50%, -50%);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
 }
 .top ,.elem{
