--- a/style.css
+++ b/style.css
@@ -411,13 +411,13 @@ ol {
   width: 100%;
   height: 100vh;
   position: relative; 
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction: column;
 }
 
 .elem{
-  position: absolute;
-  top: 50%;
-  left:50%;
-  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
 
